@@ -1,4 +1,5 @@
 2.0.0-alpha1 (2013-??-??)
+	* Added: Digest Authentication.
 	* Added: Message::getHttpVersion and Message::setHttpVersion.
 	* Added: Request::setRawServerArray, getRawServerValue.
 	* Added: Request::createFromPHPRequest
